# claude-usage-widget

./: .gitignore  README.md  install-windows.ps1  install.bat  install.ps1  install.sh  uninstall-windows.ps1  uninstall.bat  uninstall.ps1  uninstall.sh
chrome-extension/: background.js  manifest.json
docs/superpowers/plans/: 2026-04-16-tauri-cross-platform-app.md  2026-04-18-ubuntu-arch-support.md
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
scripts/: claude-usage-collector.py  claude-usage-collector.service  claude-usage-collector.timer  generate-sprites.py  gnome-setup.sh
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: main.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs  tray.rs
tauri-app/src/components/: activity-card.js  credits-card.js  dumbness-card.js  footer.js  header.js  health-card.js  peak-hours.js  quick-actions.js  session-card.js  trend-chart.js  weekly-card.js
tauri-app/src/lib/: countdown.js  theme.js
tauri-app/src/styles/: main.css
tests/: test_collector_paths.py
windows-widget/: README.md  compact_bar.py  cookie_bridge.py  data_reader.py  main.py  popup_window.py  requirements.txt  theme.py
