[package]
name = "claude-usage-tray"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
